--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,3 +18,59 @@
 <% end %>
 
 </div>
+
+<script>
+  $(".toggle-flag").on('change', function(){
+    var url = $(this).data("url");
+
+    $.ajax({
+      url: url,
+      method: "POST",
+      dataType: "json",
+      success: function(data){
+        if ( data["flag_at"] ) {
+          $("#post-flag-" + data["id"]).html(data["flag_at"]);
+        } else {
+          $("#post-flag-" + data["id"]).html("");
+        }
+      }
+    });
+  });
+  // 記下目前貼的畫面最小的貼文 ID
+  var current_post_id = <%= @posts.last.id %>;
+
+  // 當捲軸動的時候，會觸發以下事件
+  $(window).scroll(function(){
+    // 當捲到最下面時
+    if ((window.innerHeight + window.scrollY) >= document.body.offsetHeight) {
+      var url = "/posts?max_id=" + current_post_id;
+      if (url) {
+        $.ajax({
+          method: "GET",
+          url: url,
+          dataType: "script"
+        })
+      } else {
+        console.log("data ended")
+      }
+    }
+  })
+  // 這會綁click 事件到所有有 '.delete-post' class 的元素上，也就是所有的刪除按鈕
+  $(".delete-post").click(function(evt){
+    // 'evt' 是瀏覽器的事件物件， evt.preventDefault(); 會終止這個元素的默認行為:
+    // 超連結  a 的默認行為是跳到下一頁，如果沒有這行的話，送出 ajax後會跳出 show page
+    evt.preventDefault();
+    // this 是個特別的變量， 代表觸發事件的元素。 使用 attr 可以讀取元素的屬性， 這裏要拿到超連結的網址
+    var url = $(this).attr("href");
+
+    // 送出 Ajax
+    $.ajax({
+      url: url,
+      method: 'DELETE',
+      dataType: 'json', // 要求服務器回傳 JSON
+      success: function(data){    //data 就是服務器回傳的Json資料
+        $("#post-" + data["id"]).remove();
+      }
+    })
+  })
+</script>
